--- a/Cibercomerciante/Compradores/templates/Reportes/Perfil_compradores_reportes.html
+++ b/Cibercomerciante/Compradores/templates/Reportes/Perfil_compradores_reportes.html
@@ -10,41 +10,47 @@
 
 <hr>
 <ul class="thumbnails">
-  <a href="/detalleReporteVendedor/001detallePedidos/">
+  <a href="/detalleReporteComprador/005pedidosComprados/">
   <li class="span4">
     <div class="thumbnail">
       <img src="/static/img/logo.png" alt="">
-      <h4>Listado de Pedidos.</h4>
-      <p>Puede seleccionar el listado de pedidos junto sus detalles, filtrandolo por fechas.</p>
+      <h4>Pedidos realizados a vendedores.</h4>
+      <p>Listado de los pedidos realizados a empresas vendedores .</p>
     </div>
   </li>
   </a>
 
-  <a href="/detalleReporteVendedor/002productosVendedor/">
+  <a href="/detalleReporteComprador/006productosVentas/">
    <li class="span4">
     <div class="thumbnail">
       <img src="/static/img/logo.png" alt="">
-      <h4>Listado de productos.</h4>
+      <h4>Productos mas vendidos al publico.</h4>
       <p>Lista de productos juntos con su descripcion y porcentaje que representa en las ventas generales.</p>
     </div>
   </li>
+
+  </a>
+    <a href="/detalleReporteComprador/006productosVentas/">
+   <li class="span4">
+    <div class="thumbnail">
+      <img src="/static/img/logo.png" alt="">
+      <h3>Comportamiento de producto en ventas .</h3>
+      <p>Detale grafico de las ventas de un producto en determinado tiempo.</p>
+    </div>
+  </li>
   </a>
 
+    </a>
+    <a href="/detalleReporteComprador/006productosVentas/">
    <li class="span4">
     <div class="thumbnail">
       <img src="/static/img/logo.png" alt="">
-      <h4>Estadisticas de Ventas</h4>
-      <p>El producto mas vendido, el producto que mas ganancias genera, el producto mas vendido por empresas,</p>
+      <h3>Graficas generales de ventas  .</h3>
+      <p>Datos globlales de las ventas del negocio, informe general.</p>
     </div>
   </li>
-   <li class="span4">
-    <div class="thumbnail">
-      <img src="/static/img/logo.png" alt="">
-      <h3>Thumbnail label</h3>
-      <p>Thumbnail caption...</p>
-    </div>
-  </li>
-  
+  </a>
+
 </ul>
 
 {% endblock %}
