--- a/Cibercomerciante/Vendedores/templates/Reportes/Perfil_vendedores_reportes.html
+++ b/Cibercomerciante/Vendedores/templates/Reportes/Perfil_vendedores_reportes.html
@@ -30,20 +30,27 @@
   </li>
   </a>
 
+  <a href="/detalleReporteVendedor/003pedidosXEmpresa/">
    <li class="span4">
     <div class="thumbnail">
       <img src="/static/img/logo.png" alt="">
-      <h4>Estadisticas de Ventas</h4>
-      <p>El producto mas vendido, el producto que mas ganancias genera, el producto mas vendido por empresas,</p>
+      <h4>Ventas por compradores.</h4>
+      <p>Agrupa el numero de pedidos realizados por los compradores y los ordena del mayor comprador al menor</p>
     </div>
   </li>
+  </a>
+
+
+  <a href="/detalleReporteVendedor/004productosXVentas/">
    <li class="span4">
     <div class="thumbnail">
       <img src="/static/img/logo.png" alt="">
-      <h3>Thumbnail label</h3>
-      <p>Thumbnail caption...</p>
+      <h4>Productos por numero de ventas</h4>
+      <p>Listado de la cantidad de productos Vendidos</p>
     </div>
   </li>
+  </a>
+
   
 </ul>
 
